<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period"
                android:textColor="@android:color/black"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subjectTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chemistry"
                android:textColor="@android:color/black"
                android:layout_marginTop="5dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/classTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ss1a"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/periodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8am_9am"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/linkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/sciences"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>